correction of spacing

--- a/src/components/venue/index.scss
+++ b/src/components/venue/index.scss
@@ -7,7 +7,7 @@
 
   p {
     margin: 0 0 30px;
-    line-height: 1.6;
+    line-height: 1.1;
     margin-bottom: 0;
     font-size: 24px;
     font-family: "Montserrat", sans-serif;
@@ -54,7 +54,7 @@
 
   p {
     margin: 0 0 30px;
-    line-height: 1.6;
+    line-height: 1.4;
     margin-bottom: 0;
     font-size: 24px;
     font-family: "Montserrat", sans-serif;
